--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ small {
         
         /* --- EFEK VINTAGE BARU DI SINI --- */
         background-image: url('https://www.transparenttextures.com/patterns/dark-leather.png'), /* Tekstur kulit gelap */
-                        url('https://i.ibb.co/L5r64S0/vintage-paper-border.png'); /* Gambar border atau bingkai vintage (Ganti URL ini jika punya gambar lain) */
+                        url('https://github.com/Lyferaa/Lyfera/blob/main/academia.jpg'); /* Gambar border atau bingkai vintage (Ganti URL ini jika punya gambar lain) */
         background-size: cover, 80% 80%; /* Ukuran cover untuk tekstur, 80% untuk bingkai */
         background-position: center center;
         background-repeat: no-repeat;
@@ -258,4 +258,5 @@ small {
 
     #landscape-message { display: none; }
 }
+
 
