--- a/style.css
+++ b/style.css
@@ -208,8 +208,8 @@ small {
         font-family: 'Cinzel', serif;
         
         /* --- EFEK VINTAGE BARU DI SINI --- */
-        background-image: url('https://github.com/Lyferaa/Lyfera/blob/main/academia.jpg'), /* Tekstur kulit gelap */
-                        url('https://github.com/Lyferaa/Lyfera/blob/main/academia.jpg'); /* Gambar border atau bingkai vintage (Ganti URL ini jika punya gambar lain) */
+        background-image: url('https://raw.githubusercontent.com/Lyferaa/Lyfera/main/academia.jpg'), /* Tekstur kulit gelap */
+                        url('https://raw.githubusercontent.com/Lyferaa/Lyfera/main/academia.jpg'); /* Gambar border atau bingkai vintage (Ganti URL ini jika punya gambar lain) */
         background-size: cover, 80% 80%; /* Ukuran cover untuk tekstur, 80% untuk bingkai */
         background-position: center center;
         background-repeat: no-repeat;
@@ -258,6 +258,7 @@ small {
 
     #landscape-message { display: none; }
 }
+
 
 
 
